--- a/locales/en.json
+++ b/locales/en.json
@@ -28,7 +28,7 @@
     "password_reset_link_sent": "Password reset link sent to your email",
     "failed_to_save_token": "Failed to save token",
     "failed_to_update_password": "Failed to update password",
-    "password_reset_successful": "Password has been reset successfully",
+    "password_reset_success": "Password has been reset successfully",
     "failed_to_delete_token": "Failed to delete token",
     "email_already_registered": "This email address is already registered",
     "username_already_registered": "This username is already registered",
@@ -43,16 +43,15 @@
     "verification_code_resent": "Verification code resent",
     "verification_failed": "Verification failed",
     "user_deleted_successfully": "User deleted successfully",
-    "mypage_title": "My Page",
     "username": "Username",
     "email": "Email",
     "loading": "Loading...",
     "account_settings": "Account Settings",
     "mypage": "My Page",
     "settings": "Settings",
-    "logout": "Sign-out",
+    "logout": "Sign out",
     "register": "Register",
-    "login": "Sign-in",
+    "login": "Sign in",
     "search": "Search",
     "show_new_mails": "Show new mails",
     "show_new_notifications": "Show new notifications",
@@ -68,5 +67,9 @@
     "send": "Send",
     "email_send_failed": "Failed to send email",
     "account_not_activated_resend_verification": "Account not activated. Verification email resent.",
-    "account_already_activated": "Account already activated"
+    "account_already_activated": "Account already activated",
+    "do_you_have_an_account": "Do you have an account?",
+    "confirm_logout": "Are you sure you want to sign out?",
+    "create_post": "Create Post",
+    "invalid_input": "Invalid input"
 }
