--- a/locales/ja.json
+++ b/locales/ja.json
@@ -30,7 +30,7 @@
     "password_reset_link_sent": "パスワードリセットリンクがメールで送信されました",
     "failed_to_save_token": "トークンの保存に失敗しました",
     "failed_to_update_password": "パスワードの更新に失敗しました",
-    "password_reset_successful": "パスワードが正常にリセットされました",
+    "password_reset_success": "パスワードが正常にリセットされました",
     "failed_to_delete_token": "トークンの削除に失敗しました",
     "email_already_registered": "このメールアドレスは既に登録されています",
     "username_already_registered": "このユーザー名は既に登録されています",
@@ -45,7 +45,6 @@
     "verification_code_resent": "認証コードを再送しました",
     "verification_failed": "認証に失敗しました",
     "user_deleted_successfully": "ユーザーが正常に削除されました",
-    "mypage_title": "マイページ",
     "username": "ユーザー名",
     "email": "メールアドレス",
     "loading": "読み込み中...",
@@ -71,5 +70,9 @@
     "new_password": "新しいパスワード",
     "email_send_failed": "メール送信に失敗しました",
     "account_not_activated_resend_verification": "アカウントが有効化されていません。認証メールを再送しました。",
-    "account_already_activated": "アカウントは既に有効化されています"
+    "account_already_activated": "アカウントは既に有効化されています",
+    "do_you_have_an_account": "アカウントをお持ちですか？",
+    "confirm_logout": "サインアウトしてもよろしいですか？",
+    "create_post": "投稿",
+    "invalid_input": "入力が不正です"
 }
